--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,10 +1,12 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #f6f6f6;
   --foreground: #171717;
+  --black: #1D1E20;
   --gray1: #111111;
   --gray2: #555555;
+  --purple: #673DE6;
 }
 
 @layer base {
@@ -18,6 +20,17 @@
   .bg-gray-primary {
     background-color: var(--gray1);
   }
+  .bg-white-primary {
+    background-color: var(--background);
+  }
+
+  .text-white-primary {
+    color: var(--background);
+  }
+
+  .text-black-primary {
+    color: var(--black);
+  }
 
   .text-gray-primary {
     color: var(--gray1);
@@ -25,6 +38,9 @@
 
   .text-gray-secondary {
     color: var(--gray2);
+  }
+  .text-purple-primary {
+    color: var(--purple);
   }
 }
 
