--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -6,18 +6,23 @@
   --gray-primary: #111111;
   --gray-secondary: #555555;
   --purple: #673DE6;
+
 }
 
 @layer base {
   html {
     scroll-behavior: smooth;
   }
-  * {
-    color-scheme: light !important;
-  }
 
   body {
     background: var(--background);
-    font-family: var(--font-inter);
+    font-family: var(--font-dm-sans);
+  }
+}
+
+@layer utilities {
+  .ant-drawer,
+  .ant-drawer * {
+    font-family: var(--font-dm-sans), sans-serif !important;
   }
 }
